Fix tests constructors